--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 
-<h1></h1>Privacy Policy for NinkuDeals</h1>
+<h1>Privacy Policy for NinkuDeals</h1>
 
 <b>Effective Date: April 8, 2025</b>
 
