--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <b>Effective Date: April 8, 2025</b>
 
-Giggle Turtle (“us”, “we”, or “our”) operates the NinkuDeals mobile application (the “App”). This page informs you of our policies regarding the collection, use, and disclosure of data when you use our App and the choices you have associated with that data.
+<p>Giggle Turtle (“us”, “we”, or “our”) operates the NinkuDeals mobile application (the “App”). This page informs you of our policies regarding the collection, use, and disclosure of data when you use our App and the choices you have associated with that data.</p>
 
 <h2>Information Collection and Use</h2>
 
